duniverse/menhirLib.20200211/test/static/bad/undefined-position.mly
%start<int> a
%%

a: { $startpos(x) }
