duniverse/menhirLib.20200211/test/static/bad/undefined-position.exp
File "undefined-position.mly", line 4, characters 5-17:
Error: x refers to a nonexistent symbol.
